test/spec_vectors/if/fail/module_78.wat
(module (func $type-condition-empty (if (then))))